--- a/reset.css
+++ b/reset.css
@@ -14,7 +14,7 @@ html {
 
 body {
 	margin: 0;
-	font-size: 1rem/1.8;
+	font-size: 1rem;
     font-family: 'Roboto', sans-serif;
 	color: var(--color-black);
 }
