--- a/reset.scss
+++ b/reset.scss
@@ -8,7 +8,7 @@
 }
 
 html {
-	background: var(--color-bg);
+	background: #fff;
 	font-size: 100%;
 }
 
@@ -16,7 +16,7 @@ body {
 	margin: 0;
 	font-size: 1rem;
     font-family: 'Roboto', sans-serif;
-	color: var(--color-black);
+	color: #070707;
 }
 
 h1,
@@ -27,22 +27,34 @@ h5,
 h6 {
 	font-weight: bold;
 	line-height: 1.1;
-	padding-bottom: var(--padding-md)
+	padding-bottom: 1.8rem;
 }
 
 p {
 	font-weight: normal;
 	line-height: 1.4;
-	padding-bottom: var(--padding-md)
+	padding-bottom: 1.8rem
+}
+
+figure {
+	margin: 0;
 }
 
 img {
 	width: 100%;
-	height: 100%;
+	height: auto;
 	object-fit: cover
 }
 
 a {
 	color: var(--color-black);
 	text-decoration: none;
+}
+
+input{
+    border-radius: 0;
+}
+
+ol, ul, dl {
+    list-style: none;
 }
