--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -107,7 +107,7 @@ h1 {
 
   li {
     list-style-type: none;
-    background: url(./assets/check.svg) top left / 1.2rem no-repeat; /* custom checkmark */
+    background: url(../assets/check.svg) top left / 1.2rem no-repeat; /* custom checkmark */
     padding-left: 2rem;
     padding-bottom: 1rem;
 
