--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -25,7 +25,7 @@ h3,
 h4,
 h5,
 h6 {
-	font-weight: bold;
+	font-weight: normal;
 	line-height: 1.1;
 	padding-bottom: 1.8rem;
 }
@@ -47,7 +47,7 @@ img {
 }
 
 a {
-	color: var(--color-black);
+	color: #070707;
 	text-decoration: none;
 }
 
